For github pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
-</head>
+    <title>День рождения Леночки Золотовой</title>
+<link href="./style.css" rel="stylesheet"></head>
 <body>
-<h1>Hello!!!</h1>
-</body>
+<div id="app"></div>
+<script type="text/javascript" src="bundle.js" async></script></body>
 </html>
